titler og meta beskrivelser tilføjet

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Branding med unik Storytelling | Multimedie bureauet for de kreative håndværkere. Vi tilbyder grafiske online løsninger."> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
-    <title>Forside</title>
+    <title>Story Media | Multimediebureau | Storytelling | Branding</title>
 </head>
 <body class="BGforside">
     <header class="header1" id="tiltop">
