--- a/kontakt.html
+++ b/kontakt.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Story Media skaber kreative resultater, vi har specialiseret vores branding proces til iværksættere med kreativt håndværk - kontakt os i dag!"> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
-    <title>Kontakt</title>
+    <title>Kontakt Story Media for kreative resultater</title>
 </head>
 <body class="BGandre">
     <header class="header1" id="tiltop">
