--- a/faq.html
+++ b/faq.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hvad er branding? Hvad er en visuel identitet? Hvad er storytelling? Vi giver dig svarene på din markedsføring."> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
-    <title>FAQ</title>
+    <title>Story Media | Professionelt multimediebureau </title>
 </head>
 <body class="BGandre">
     <header class="header1" id="tiltop">
