--- a/om-story-media.html
+++ b/om-story-media.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Story Media er passionerede omkring iværksætteri og branding. Er du iværksætter, så tøv ikke med at tage kontakt."> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
-    <title>Om Story Media</title>
+    <title>Story Media | Iværksætteri og branding </title>
 </head>
 <body class="BGomos">
     <header class="header1" id="tiltop">
