--- a/ydelser.html
+++ b/ydelser.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hjemmeside design, logo design, grafisk design og meget mere - pakket ind i unik storytelling | Story Media | Multimedie bureau"> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
-    <title>Ydelser</title>
+    <title>Story Media | Services | Ydelser</title>
 </head>
 <body class="BGandre">
 
