Styling til storytelling.html

--- a/storytelling.html
+++ b/storytelling.html
@@ -96,9 +96,9 @@
                 <p>Drømmen</p>
                 <h2>Vaser i træ</h2>
                 <p>Mads kontaktede Story Media med ønsket om at gøre alvor af hans drøm om, at kunne leve af hans hobby som trædrejer. </p>
-                <p>“Så længe jeg kan huske, har jeg elsket at komme i skoven og udforske naturen. Jeg bliver aldrig træt af duften af skovbunden og de smukke blade der skifter farve for hver årstid” - Mads</p>
+                <p class="italicfont">“Så længe jeg kan huske, har jeg elsket at komme i skoven og udforske naturen. Jeg bliver aldrig træt af duften af skovbunden og de smukke blade der skifter farve for hver årstid” - Mads</p>
                 <p>Mads drejer vaser og skåle til hjemmet. Han bruger udelukkende nordiske træsorter og køber bæredygtigt træ.</p>
-                <p>“Min morfar snittede små træfigurer i hans fritid. Jeg var dybt fascineret af det, han kunne. Så ofte det var muligt, cyklede jeg ud til hans lille værksted efter skole” - Mads</p>
+                <p class="italicfont">“Min morfar snittede små træfigurer i hans fritid. Jeg var dybt fascineret af det, han kunne. Så ofte det var muligt, cyklede jeg ud til hans lille værksted efter skole” - Mads</p>
             </article>
                 <img class="billede-hojre" src="img/Wooddesigntræ.png" alt="Bøgetræ">
         </section>
@@ -129,9 +129,9 @@
             <article class="tekst-hojre">
                 <h2>Salg fra værkstedet</h2>
                 <p>Mads sælger hans færdige vaser og skåle fra hans hobbyværksted. Han har aldrig møblerne til salg. Alt sælges fra mund til mund. </p>
-                <p>“Der har været stor interesse for mine træting fra starten. Jeg var så heldig at sælge min første vase til en familierelation med et stort netværk. Og siden den dag har jeg haft flere forespørgsler” - Mads</p>
+                <p class="italicfont">“Der har været stor interesse for mine træting fra starten. Jeg var så heldig at sælge min første vase til en familierelation med et stort netværk. Og siden den dag har jeg haft flere forespørgsler” - Mads</p>
                 <p>Den stigende efterspørgsel var grunden til at Mads turde satse på at gå selvstændig.</p>
-                <p>“Jeg ved dog også godt, at hvis jeg skal leve af mit håndværk, så skal jeg ud og finde flere kunder. Og her har jeg brug for hjælp.” - Mads</p>
+                <p class="italicfont">“Jeg ved dog også godt, at hvis jeg skal leve af mit håndværk, så skal jeg ud og finde flere kunder. Og her har jeg brug for hjælp.” - Mads</p>
             </article>
         </section>
 
@@ -149,8 +149,8 @@
             <article class="tekst-hojre">
                 <h2>Tilbage til naturen</h2>
                 <p>For Mads er der en masse følelser forbundet med hans håndværk. Barndomsminderne er en stor del af det, desuden hans store glæde for naturen og ikke mindst hans passion for at arbejde med træ. </p>
-                <p>“Den følelse jeg ønsker at give af mit brand, er at få et stykke natur ind i indretningen. Et stykke natur med sin egen historie. </p>
-                <p>Der er lige nu en tendens, hvor mennesker søger tilbage til den ro og skønhed naturen giver. Den oplevelse vil jeg gerne være med til at bringe ind i hjemmet med mine vaser” - Mads</p>
+                <p class="italicfont">“Den følelse jeg ønsker at give af mit brand, er at få et stykke natur ind i indretningen. Et stykke natur med sin egen historie. </p>
+                <p class="italicfont">Der er lige nu en tendens, hvor mennesker søger tilbage til den ro og skønhed naturen giver. Den oplevelse vil jeg gerne være med til at bringe ind i hjemmet med mine vaser” - Mads</p>
             </article>
         </section>
 
@@ -173,8 +173,8 @@
                 <h2>Salg og some</h2>
                 <p>Mads har en bærbar computer og en smartphone. Han bruger computeren til at researche og foretage netkøb. Smartphonen bliver anvendt primært til beskeder, opkald og en smule instagram. </p>
                 <p>Markedsføring har han aldrig arbejdet med.</p>
-                <p>“Jeg er en habil bruger af IT, men ikke mere end det. Jeg vil hellere ud i værkstedet og bruge mine hænder. </p>
-                <p>Markedsføring er en by i Rusland. Men jeg ved, at det er vigtigt, og derfor har det været essentielt for mig at vælge et bureau, der kan hjælpe mig med den del” - Mads</p>
+                <p class="italicfont">“Jeg er en habil bruger af IT, men ikke mere end det. Jeg vil hellere ud i værkstedet og bruge mine hænder. </p>
+                <p class="italicfont">Markedsføring er en by i Rusland. Men jeg ved, at det er vigtigt, og derfor har det været essentielt for mig at vælge et bureau, der kan hjælpe mig med den del” - Mads</p>
             </article>
         </section>
 
@@ -188,7 +188,7 @@
             </article>
             <div class="billede-hojre beigeborder woodfarve">
                 <img src="img/Wooddesignfingeraftryk.png" alt="Fingeraftryk">
-                <p>Storytelling er et unikt fingeraftryk</p>
+                <p class="fingertekst"><strong>Storytelling</strong> er et unikt fingeraftryk</p>
             </div>
         </section>
 
