Oprettet css til mediaquery og oprettet globale værdier for h og p

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Eksperter i branding og markedsføring. Vores branding proces sikrer dig et professionelt resultat"> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/mediaquery.css">
     <title>Story Media | Branding proces one on one </title>
 </head>
 <body class="BGbranding">
@@ -64,7 +65,8 @@
         </div>
        
         <!--Hovedindhold-->
-       
+
+
         <div class="branding-container-venstre">
             <section>
                 <h3>Hvad gør din virksomhed unik?</h3>
