Styling af branding-proces mobilversion

--- a/kontakt.html
+++ b/kontakt.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Story Media skaber kreative resultater, vi har specialiseret vores branding proces til iværksættere med kreativt håndværk - kontakt os i dag!"> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/mediaquery.css">
     <title>Kontakt Story Media for kreative resultater</title>
 </head>
 <body class="BGandre">
