--- a/om-story-media.html
+++ b/om-story-media.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Story Media er passionerede omkring iværksætteri og branding. Er du iværksætter, så tøv ikke med at tage kontakt."> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/mediaquery.css">
     <title>Story Media | Iværksætteri og branding </title>
 </head>
 <body class="BGomos">
