--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Hvad er branding? Hvad er en visuel identitet? Hvad er storytelling? Vi giver dig svarene på din markedsføring."> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/mediaquery.css">
     <title>Story Media | Professionelt multimediebureau </title>
 </head>
 <body class="BGandre">
