--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Branding med unik Storytelling | Multimedie bureauet for de kreative håndværkere. Vi tilbyder grafiske online løsninger."> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/mediaquery.css">
     <title>Story Media | Multimediebureau | Storytelling | Branding</title>
 </head>
 <body class="BGforside">
