--- a/storytelling.html
+++ b/storytelling.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Story Media gør din branding autentisk, troværdig og unik med storytelling.  Få den bedste start som iværksætter med en samlet brandingløsning hos os. "> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/mediaquery.css">
     <title>Story Media | Storytelling | Vi fortæller din historie</title>
 </head>
 <body class="BGandre">
