--- a/ydelser.html
+++ b/ydelser.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
     <title>Story Media | Services | Ydelser</title>
+    <link rel="stylesheet" href="css/mediaquery.css">
 </head>
 <body class="BGandre">
 
