Styling af mobilfooter - tilføjelse af mobilfooter til alle html-sider

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -181,7 +181,7 @@
                             <input type="submit" name="submit" value="Tilmeld">
                         </form>
                     </div>
-                    <div>
+                 <div>
                         
                         <div class="someplacering">
                             <a  href="#"><img class="someikon" src="img/instagram ikon.png" alt="Instagram ikon"></a>
@@ -243,11 +243,17 @@
             </div>
         </div>
 
-        <a href="mailto:info@storymedia.com">info@storymedia.com</a>
-        <img class="mailikon" src="img/mail ikon.png" alt="mailikon">
-                        
-        <a href="tel:+4599999999">+45 99 99 99 99</a>
-        <img class="telefonikon" src="img/telefon ikon.png" alt="telefon ikon">
+        <section class="footer-kontakt">
+        <div>
+            <a href="mailto:info@storymedia.com">info@storymedia.com</a>
+            <img class="mailikon" src="img/mail ikon.png" alt="mailikon">
+        </div>
+        <div>
+            <a href="tel:+4599999999">+45 99 99 99 99</a>
+            <img class="telefonikon-footer" src="img/telefon ikon.png" alt="telefon ikon">
+        </div>
+        </section>
+
         <hr class="seperator">
         <h5 class="copy">Copyright &copy; 2023 Story Media. All rights reserved.</h5>
     </footer>
