--- a/index.html
+++ b/index.html
@@ -236,5 +236,60 @@
         <hr class="seperator">
         <p class="copy">Copyright &copy; 2023 Story Media. All rights reserved.</p>
     </footer>
+
+     <!--Footer-mobil-->
+     <footer class="footer-mobil">
+        <hr class="seperator">
+        <div class="footer-logo-placering">
+            <img class="footer-mobil-logo" src="img/Logo - ikon ovenpå tekst.png" alt="Logo Story Media">
+        </div>
+        <div class="footer-nav-grid">
+            <div class="footernav">
+                <nav>
+                    <h5>Navigation</h5>
+                    <ul>
+                        <li><a href="index.html">Forside</a></li>
+                        <li><a href="ydelser.html">Ydelser</a></li>
+                        <li><a href="branding-proces.html">Branding proces</a></li>
+                        <li><a href="storytelling.html">Storytelling</a></li>
+                        <li><a href="om-story-media.html">Om Story Media</a></li>
+                        <li><a href="kontakt.html">Kontakt</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
+                    </ul>
+                </nav>
+            </div>
+        
+            <div class="someplacering">
+                <a  href="#"><img class="someikon" src="img/instagram ikon.png" alt="Instagram ikon"></a>
+                <a  href="#"><img class="someikon" src="img/linkedin ikon.png" alt="LinkedIn ikon"></a>
+                <a  href="#"><img class="someikon" src="img/facebook ikon.png" alt="Facebook ikon"></a>
+            </div>
+        </div>
+
+        <div class="footerform">
+            <div class="nyhedsbrev">
+                <h5>Tilmeld nyhedsbrev</h5>
+                <form>
+                    <label class="visually-hidden" for="mail"></label>
+                    <input id="mail" type="email" placeholder="E-mail">
+                    <input type="submit" name="submit" value="Tilmeld">
+                </form>
+            </div>
+        </div>
+
+        <section class="footer-kontakt">
+        <div>
+            <a href="mailto:info@storymedia.com">info@storymedia.com</a>
+            <img class="mailikon" src="img/mail ikon.png" alt="mailikon">
+        </div>
+        <div>
+            <a href="tel:+4599999999">+45 99 99 99 99</a>
+            <img class="telefonikon-footer" src="img/telefon ikon.png" alt="telefon ikon">
+        </div>
+        </section>
+
+        <hr class="seperator">
+        <h5 class="copy">Copyright &copy; 2023 Story Media. All rights reserved.</h5>
+    </footer>
 </body>
 </html>
