Styling af ydelser.html

--- a/ydelser.html
+++ b/ydelser.html
@@ -65,9 +65,10 @@
 
        <!--Hovedindhold-->
 
-       <div class="stark-container">
-            <img src="img/Visuelidentitet.png" alt="Billede af postkort">
-
+        <div class="stark-container">
+           
+            <img class="stark-img" src="img/Visuelidentitet.png" alt="Billede af postkort">
+            
             <article>
                 <h4 class="overoverskrift">Stå stærkere</h4>
                 <h2>Din visuelle identitet</h2>
