styling af ydelser.html som tablet

--- a/ydelser.html
+++ b/ydelser.html
@@ -6,8 +6,9 @@
     <meta name="description" content="Hjemmeside design, logo design, grafisk design og meget mere - pakket ind i unik storytelling | Story Media | Multimedie bureau"> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
-    <title>Story Media | Services | Ydelser</title>
     <link rel="stylesheet" href="css/mediaquery.css">
+    <title>Story Media | Services | Ydelser</title>
+    
 </head>
 <body class="BGandre">
 
@@ -191,7 +192,7 @@
                 <h2>Den specifikke</h2>
                 <p>Har du kun brug for hjælp til specifikke opgaver, er det også en mulighed. Vi har listet nogle af de dele op, som vi ved, der er brug for. </p>
                 <p class="specafstand">Listen er ikke udtømmende - du er velkommen til at kontakte os med lige præcis dit behov.</p>
-                <ul class="hero-gap-til-knap">
+                <ul class="specafstand">
                     <li><p>Logo</p></li>
                     <li><p>Bannere</p></li>
                     <li><p>Plakater</p></li>
@@ -202,9 +203,9 @@
                     <li><p>Skabeloner til SoMe</p></li>
                     <li><p>Gennemgang af eksisterende website</p></li>
                 </ul>
-                <a class="knap" href="kontakt.html">Kontakt os for pris</a>
+                <a class="knap knap-tablet" href="kontakt.html">Kontakt os for pris</a>
             </article>
-            <img src="img/Stearinlys.png" alt="Billede af lys">
+            <img class="spec-img" src="img/Stearinlys.png" alt="Billede af lys">
         </div>
 
 
