--- a/ydelser.html
+++ b/ydelser.html
@@ -49,7 +49,7 @@
                 <p class="hero-gap-til-knap">Uanset om du er klar til den fulde brandingpakke eller blot har brug for en løsning på en specifik opgave, så kan vi hjælpe.</p>
                 <a href="ydelser.html#pakkerne" class="knap">Gå til pakkerne</a>
             </article>
-            <div class="hero-img imgtop">
+            <div class="hero-img imgtop ydelser-hero-img">
                 <img src="img/illustration - ydelser.png" alt="Illustration af pige på kontor">
             </div>
         </div>
