Tilpasset Ydelser.html til mobil

--- a/ydelser.html
+++ b/ydelser.html
@@ -127,6 +127,9 @@
 
         <div class="orangebaggrundydelser"></div>
         
+        <div class="orangebaggrundydelser-mobilet"></div>
+        <div class="orangebaggrundydelser-mobilto"></div>
+
         <div class="hjemmesidekasse-container">
             <section>
                 <div class="centrerhjemmeside">
