Styling storytelling.html til tablet

--- a/storytelling.html
+++ b/storytelling.html
@@ -71,7 +71,7 @@
             <p>Storytelling er din fortælling om, hvorfor din virksomhed eksisterer - din virksomheds WHY. Som oftest er det bundet op på livserfaringer, passion og skaberkraft, så der er altid nogle spændende byggesten til en storytelling i din iværksætterrejse. </p>
             <p>Storytelling bygges både op omkring fortid, nutid og fremtid. Derfor vil redskabet være relevant kontinuerligt i dit arbejde med branding af din virksomhed.</p>
         </article>
-            <img src="img/baalsted.png" alt="Baalsted">
+            <img class="baalsted" src="img/baalsted.png" alt="Baalsted">
         </div>
 
        <article class="hvorfor-storytelling">
