Styling storytelling mobil

--- a/storytelling.html
+++ b/storytelling.html
@@ -48,7 +48,7 @@
                 <p class="hero-gap-til-knap">I samarbejde med Story Media og vores brug af storytelling er hans smukke håndværk og historie blevet til et unikt udtryk i hans brand.</p>
                 <a href="kontakt.html" class="knap">Kontakt os</a>
             </article>
-            <div class="hero-img imgtop">
+            <div class="hero-img imgtop hero-story-mobil-img">
                 <img src="img/Wooddesignlogo.png" alt="Wood design logo">
             </div>
         </div>
@@ -84,7 +84,7 @@
                 <li><strong>Længere besøgstid på din hjemmeside</strong>, fordi din visuelle identitet og sproget holder kunden fanget positivt. Det er positivt for SEO optimering.</li>
                 <li>Større sandsynlighed for at <strong>kunderne husker dig</strong> og din virksomhed. Storytelling gør indholdet af din branding relaterbart, vækker følelser og behovet for dit produkt øges.</li>
             </ul>
-            <a href="ydelser.html" class="knap">Se vores ydelser</a>
+            <a href="ydelser.html" class="knap hvorfor-story-knap">Se vores ydelser</a>
         </article>
 
         <article class="case">
@@ -146,7 +146,7 @@
         </section>
 
         <section class="case-wrapper">
-            <img class="billede-venstre img-just" src="img/Wooddesigntræoverflade.png" alt="Billede af træbark">
+            <img class="billede-venstre img-just bark-img-mobil" src="img/Wooddesigntræoverflade.png" alt="Billede af træbark">
             <article class="tekst-hojre">
                 <h2>Tilbage til naturen</h2>
                 <p>For Mads er der en masse følelser forbundet med hans håndværk. Barndomsminderne er en stor del af det, desuden hans store glæde for naturen og ikke mindst hans passion for at arbejde med træ. </p>
@@ -163,8 +163,8 @@
                 <p>Logo´et er simpelt og man fornemmer, at det handler om træ og natur.</p>
             </article>
             <div class="billede-hojre beigeborder woodfarve">
-                <img src="img/Wooddesignlogo.png" alt="Wood design logo">
-                <img src="img/Wooddesignfarver.png" alt="Wood design farver">
+                <img class="woodmood" src="img/Wooddesignlogo.png" alt="Wood design logo">
+                <img class="woodmood" src="img/Wooddesignfarver.png" alt="Wood design farver">
             </div>
         </section>
 
@@ -188,7 +188,7 @@
                 <p>Vores rejse med Mads blev ved i nogle måneder efter, hvor vi ydede fuld support til hans løsninger. Det sikrede ham den bedste digitale start på hans iværksætterdrøm.</p>
             </article>
             <div class="billede-hojre beigeborder woodfarve">
-                <img src="img/Wooddesignfingeraftryk.png" alt="Fingeraftryk">
+                <img class="finger-mobil" src="img/Wooddesignfingeraftryk.png" alt="Fingeraftryk">
                 <p class="fingertekst"><strong>Storytelling</strong> er et unikt fingeraftryk</p>
             </div>
         </section>
