FAQ og om Story Media - små rettelser

--- a/om-story-media.html
+++ b/om-story-media.html
@@ -118,10 +118,11 @@
     </section>
 
     <div class="startup-omos">
-        <img src="img/Start up.png" alt="*Start up*" class="startup-os-img">
         <img src="img/omos-streg1.png" alt="stiblet linje der pynter siden" class="stregen-fyld">
+        <img src="img/Start up.png" alt="*Start up*" class="startup-os-img">
     </div>
 
+    <!--opstart-->
     <section class="omos-sektion">
         <div class="omos-logo-txt">
             <img src="img/Logo - ikon+tekst på linje.png" alt="Story Media Logo">
