tekst-billede-sektion forside tilpasset

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 
     <!--tekst og billede sektioner-->
     <section class="text-img-section">
-        <div class="foto2">
-            <img src="img/forside-ler.png" alt="En person der arbejder med ler">
+        <div class="content-foto2">
+            <img src="img/forside-ler.png" alt="Person der arbejder med ler">
         </div>
-        <div class="txt2">
+        <div class="content-txt2">
             <h2>Storytelling</h2>
             <p>Vi er specialister i storytelling.</p>  
 
@@ -121,7 +121,7 @@
     </section>
 
     <section class="text-img-section">
-        <div class="content txt">
+        <div class="content-txt">
             <h2>branding proces</h2>
             <p>Vi gør os umage. </p>  
 
@@ -131,16 +131,16 @@
 
             <a class="knap" href="branding-proces.html">Gå til brandingproces</a>
         </div>
-        <div class="content foto">
+        <div class="content-foto">
             <img src="img/forside-smykker.png" alt="Person der sidder og laver en ring">
         </div>
     </section>
 
     <section class="text-img-section">
-        <div class="foto2">
+        <div class="content-foto2">
             <img src="img/forside-blomst.png" alt="">
         </div>
-        <div class="txt2">
+        <div class="content-txt2">
             <h2 class="vi-tilbyder">Vi tilbyder</h2>
             <h3>Visuel identitet</h3>
             <h3>Hjemmeside</h3>
@@ -154,7 +154,7 @@
     </section>
 
     <section class="text-img-section">
-        <div class="content txt">
+        <div class="content-txt">
             <h2>Vi er story media</h2>
             <p>Når du bestiller en ydelse gennem Story Media er det Elisabeth og Maja, du kommer til at møde. </p>  
 
