--- a/faq.html
+++ b/faq.html
@@ -151,7 +151,7 @@
 
         
         <div class="faq-bunden">
-            <img src="img/faq-streg3.png" alt="">
+            <img src="img/faq-streg3.png" alt="pynte streg">
             <!--pil til toppen-->
             <a class="pilop" href="#tiltop"> <img class="pilopimg" src="img/pilop.png" alt="Pil til toppen"></a>
         </div>
