Rettelse storytelling desktop

--- a/storytelling.html
+++ b/storytelling.html
@@ -104,8 +104,8 @@
                 <img class="billede-hojre" src="img/Wooddesigntræ.png" alt="Bøgetræ">
         </section>
 
-        <section class="case-wrapper">
-            <article class="beigeborder grid-justering">
+        <section class="case-wrapper beigeborder">
+            <article class=" grid-justering">
                 <h4 class="wooddesignoverskrift">Wood Design</h4>
                 <ul>
                     <li><p>Unikt håndværk</p></li>
@@ -136,13 +136,13 @@
             </article>
         </section>
 
-        <section class="case-wrapper">
+        <section class="case-wrapper beigeborder">
             <article class="tekst-venstre beigekasse">
                 <h2>Den perfekte kunde</h2>
                 <p>Ingen sælger til alle - men alle har en kunde. For Mads var det vigtigt at forstå sin kunde, for fremadrettet at kunne målrette sin markedsføring.</p>
                 <p>Mads´ færdige varer ikke er helt billige. Derfor rammer han en kundegruppe der i store træk har en god økonomi, går op i indretning og som værdsætter naturlige materialer og unikt håndværk. </p>
             </article>
-            <img class="billede-hojre beigeborder illu-grid" class="beigeborder" src="img/illustration-kunde3.png" alt="Illustration af en kunde">
+            <img class="billede-hojre illu-grid" class="beigeborder" src="img/illustration-kunde3.png" alt="Illustration af en kunde">
         </section>
 
         <section class="case-wrapper">
@@ -155,14 +155,14 @@
             </article>
         </section>
 
-        <section class="case-wrapper">
+        <section class="case-wrapper beigeborder">
             <article class="tekst-venstre beigekasse">
                 <h2>Logo og farvepalette</h2>
                 <p>Med udgangspunkt i Mads´ drøm, barndomsminder og glæde for naturen, skabte vi et logo og en farvepalette, som henleder tankerne til skoven og årstidens farver. </p>
                 <p>Farver er fuld af symbolik og med de brune og grønne nuancer, fanger paletten følelsen af stabilitet og tryghed, samt vækst, fornyelse og bæredygtighed. </p>
                 <p>Logo´et er simpelt og man fornemmer, at det handler om træ og natur.</p>
             </article>
-            <div class="billede-hojre beigeborder woodfarve">
+            <div class="billede-hojre woodfarve">
                 <img class="woodmood" src="img/Wooddesignlogo.png" alt="Wood design logo">
                 <img class="woodmood" src="img/Wooddesignfarver.png" alt="Wood design farver">
             </div>
@@ -179,7 +179,7 @@
             </article>
         </section>
 
-        <section class="case-wrapper">
+        <section class="case-wrapper beigeborder">
             <article class="tekst-venstre beigekasse">
                 <h2>Markedsføring og strategi</h2>
                 <p>Med mindre man arbejder med digital markedsføring, så er det meget få iværksættere, der både har tid og viden om markedsføring. </p>
@@ -187,7 +187,7 @@
                 <p>Fordi Story Media var med fra start til slutprodukt, var vi i stand til at skabe en sammenhængende visuel identitet med fokus på den følelse, Mads gerne vil have sit brand til at ose af.</p>
                 <p>Vores rejse med Mads blev ved i nogle måneder efter, hvor vi ydede fuld support til hans løsninger. Det sikrede ham den bedste digitale start på hans iværksætterdrøm.</p>
             </article>
-            <div class="billede-hojre beigeborder woodfarve">
+            <div class="billede-hojre  woodfarve">
                 <img class="finger-mobil" src="img/Wooddesignfingeraftryk.png" alt="Fingeraftryk">
                 <p class="fingertekst"><strong>Storytelling</strong> er et unikt fingeraftryk</p>
             </div>
