Justering af storytelling tablet

--- a/storytelling.html
+++ b/storytelling.html
@@ -188,7 +188,7 @@
                 <p>Vores rejse med Mads blev ved i nogle måneder efter, hvor vi ydede fuld support til hans løsninger. Det sikrede ham den bedste digitale start på hans iværksætterdrøm.</p>
             </article>
             <div class="billede-hojre  woodfarve">
-                <img class="finger-mobil" src="img/Wooddesignfingeraftryk.png" alt="Fingeraftryk">
+                <img class="finger-mobil finger-tablet" src="img/Wooddesignfingeraftryk.png" alt="Fingeraftryk">
                 <p class="fingertekst"><strong>Storytelling</strong> er et unikt fingeraftryk</p>
             </div>
         </section>
