rettelse storytelling mobil

--- a/storytelling.html
+++ b/storytelling.html
@@ -101,7 +101,7 @@
                 <p>Mads drejer vaser og skåle til hjemmet. Han bruger udelukkende nordiske træsorter og køber bæredygtigt træ.</p>
                 <p class="italicfont">“Min morfar snittede små træfigurer i hans fritid. Jeg var dybt fascineret af det, han kunne. Så ofte det var muligt, cyklede jeg ud til hans lille værksted efter skole” - Mads</p>
             </article>
-                <img class="billede-hojre" src="img/Wooddesigntræ.png" alt="Bøgetræ">
+                <img class="billede-hojre bogetrae" src="img/Wooddesigntræ.png" alt="Bøgetræ">
         </section>
 
         <section class="case-wrapper beigeborder">
