Diverse rettelser på mediaquery og rettelse af menuplacering i mobil

--- a/faq.html
+++ b/faq.html
@@ -2,7 +2,7 @@
 <html lang="da">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
     <meta name="description" content="Hvad er branding? Hvad er en visuel identitet? Hvad er storytelling? Vi giver dig svarene på din markedsføring."> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
