--- a/om-story-media.html
+++ b/om-story-media.html
@@ -2,7 +2,7 @@
 <html lang="da">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
     <meta name="description" content="Story Media er passionerede omkring iværksætteri og branding. Er du iværksætter, så tøv ikke med at tage kontakt."> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
