--- a/storytelling.html
+++ b/storytelling.html
@@ -2,7 +2,7 @@
 <html lang="da">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
     <meta name="description" content="Story Media gør din branding autentisk, troværdig og unik med storytelling.  Få den bedste start som iværksætter med en samlet brandingløsning hos os. "> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
