--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header1 headerforside" id="tiltop">
-        <a href="index.html"><img src="img/Logo-ikon+tekst.på.linje.png" alt="Story Media logo" class="headerlogo"></a>
+        <a href="index.html"><img src="img/Logo-ikon+tekst.på.linje.png" alt="Story Media logo" class="headerlogo"></a>
         <nav>
             <ul>
             <li><a href="kontakt.html"><img src="img/mail-ikon.png" alt="kontakt icon" class="kontaktikon"></a></li>
